<resources>
    <string name="app_name">Pad</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginName">
        IPS \n
        智能排产系统
    </string>
    <string name="login">登录</string>

    <string name="user">用户</string>
    <string name="units">件数:316</string>
    <string name="count_time">倒计时</string>
    <string name="qualityPro">质量问题</string>
    <string name="start_pause">暂停</string>
    <string name="finish">完工</string>
    <string name="logout">退出</string>

    <string name="commit">提交</string>
    <string name="oldWorkspace">原工位</string>
    <string name="qualityInspector">质检工位</string>
    <string name="assignedPosition">指定站位</string>
    <string name="back">返回</string>



    <!-- TODO: Remove or change this placeholder blue_text_light -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
