<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:custom="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_weight="0.6"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ui.activity.base.BaseActivity"
>
    <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="0.6"-->
    <!--&gt;-->
        <TextView
                android:id="@+id/user"
                android:text="@string/user"
                android:textSize="@dimen/TextSizeMiddle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@drawable/user"
                android:shadowColor="@color/black"
                android:gravity="center"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/units"
                android:background="@drawable/user"
                android:shadowColor="@color/black"
                android:textSize="@dimen/TextSizeMiddle"
                android:text="@string/units"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/count_time"
                android:background="@drawable/user"
                android:shadowColor="@color/black"
                android:textSize="@dimen/TextSizeMiddle"
                android:text="@string/count_time"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <Button
                android:id="@+id/qualityPro"
                android:background="@drawable/quality_pro"
                android:shadowColor="@color/black"
                android:textSize="@dimen/TextSizeMiddle"
                android:text="@string/qualityPro"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <Button
                android:id="@+id/start_pause"
                android:background="@drawable/start_pause"
                android:shadowColor="@color/black"
                android:textSize="@dimen/TextSizeMiddle"
                android:text="@string/start_pause"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <Button
                android:id="@+id/finish"
                android:background="@drawable/finish"
                android:shadowColor="@color/black"
                android:textSize="@dimen/TextSizeMiddle"
                android:text="@string/finish"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <Button
                android:id="@+id/logout"
                android:background="@drawable/logout"
                android:shadowColor="@color/black"
                android:textSize="@dimen/TextSizeMiddle"
                android:text="@string/logout"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </LinearLayout>

<!--</LinearLayout>-->