<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:expandable="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0px"
        android:paddingRight="0px"
        android:paddingTop="0px"
        android:paddingBottom="0px"
        tools:context=".ui.activity.QualityProblemActivity">

    <!--总体布局-->
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <!--上布局-->
        <LinearLayout
                android:layout_weight="1.5"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:background="@drawable/border"
                android:layout_height="match_parent">
            <TextView
                    android:text="选择\n问题工序"
                    android:textSize="30dp"
                    android:layout_weight="2"
                    android:background="@drawable/blue_text_dark"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="用户"
                        android:background="@drawable/border"
                        android:textSize="20dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                <TextView
                        android:text="工序:\n工位:\n操作人:\n工位变动:"
                        android:background="@drawable/border"
                        android:textSize="20dp"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>
        <!--下布局-->
        <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="选择\n问题点"
                    android:background="@drawable/blue_text_light"
                    android:textSize="30dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Button
                        android:layout_weight="1"
                        android:text="@string/commit"
                        android:background="@drawable/commit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                <Button
                        android:layout_weight="1"
                        android:text="@string/oldWorkspace"
                        android:background="@drawable/blue_text_dark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                <Button
                        android:layout_weight="1"
                        android:text="@string/qualityInspector"
                        android:background="@drawable/blue_text_dark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                <Button
                        android:layout_weight="1"
                        android:text="@string/assignedPosition"
                        android:background="@drawable/blue_text_dark"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                <Button
                        android:layout_weight="1"
                        android:text="@string/back"
                        android:background="@drawable/logout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>

